--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.2",
@@ -15,6 +16,8 @@
     "next-auth": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.5.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
